--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,10 @@
 
     <string name="lack">Brak</string>
 
+    <!--Categories-->
+    <string name="thriller">Thriller</string>
+    <string name="sci_fi">Science fiction</string>
+    <string name="fantasy">Fantastyka</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_image">ImageActivity</string>
