--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="title_product">Tytuł</string>
     <string name="author_product">Autor</string>
     <string name="price_product">Cena</string>
+    <string name="category">Kategoria</string>
 
     <string name="asc">rosnąco</string>
     <string name="desc">malejąco</string>
@@ -28,4 +29,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_image">ImageActivity</string>
     <string name="title_activity_favorites">FavoritesActivity</string>
+    <string name="title_activity_filter">FilterActivity</string>
 </resources>
